--- a/Week1/seminar/build.gradle
+++ b/Week1/seminar/build.gradle
@@ -20,17 +20,28 @@ configurations {
 repositories {
 	mavenCentral()
 }
-
 dependencies {
-	//jpa
+
+	// spring boot
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-	// H2 Datbase 추가
-	runtimeOnly 'com.h2database:h2'
-
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+
+	// h2
+	runtimeOnly 'com.h2database:h2'
+
+	// mysql
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+
+	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
