--- a/Week1/seminar/.gitignore
+++ b/Week1/seminar/.gitignore
@@ -42,3 +42,6 @@ application-local.yaml
 /src/main/resources/application-dev.yml
 /src/main/resources/application-local.yml
 /src/main/resources/data.sql
+/.idea/
+/.gradle/
+/build/
