--- a/Week1/seminar/build.gradle
+++ b/Week1/seminar/build.gradle
@@ -36,10 +36,10 @@ dependencies {
 
 	// mysql
 	runtimeOnly 'com.mysql:mysql-connector-j'
-
-	// security
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	testImplementation 'org.springframework.security:spring-security-test'
+//
+//	// security
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	testImplementation 'org.springframework.security:spring-security-test'
 
 	// test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
