--- a/Week1/seminar/src/main/resources/application-dev.yml
+++ b/Week1/seminar/src/main/resources/application-dev.yml
@@ -1,4 +1,8 @@
 spring:
+  config:
+    activate:
+      on-profile: dev
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/mysql
@@ -6,10 +10,16 @@ spring:
     password: midev2112
 
 
-  config:
-    activate:
-      on-profile: dev
-
   jpa:
+    show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
